docs/api/qiskit/0.39/qiskit.algorithms.VQD.md
---
title: VQD
description: API reference for qiskit.algorithms.VQD
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.VQD
---

# VQD

<span id="qiskit.algorithms.VQD" />

`VQD(ansatz=None, k=2, betas=None, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Bases: `qiskit.algorithms.variational_algorithm.VariationalAlgorithm`, [`qiskit.algorithms.eigen_solvers.eigen_solver.Eigensolver`](qiskit.algorithms.Eigensolver "qiskit.algorithms.eigen_solvers.eigen_solver.Eigensolver")

Pending deprecation: Variational Quantum Deflation algorithm.

The VQD class has been superseded by the [`qiskit.algorithms.eigensolvers.VQD`](qiskit.algorithms.eigensolvers.VQD "qiskit.algorithms.eigensolvers.VQD") class. This class will be deprecated in a future release and subsequently removed after that.

[VQD](https://arxiv.org/abs/1805.08138) is a quantum algorithm that uses a variational technique to find the k eigenvalues of the Hamiltonian $H$ of a given system.

The algorithm computes excited state energies of generalised hamiltonians by optimising over a modified cost function where each succesive eigen value is calculated iteratively by introducing an overlap term with all the previously computed eigenstaes that must be minimised, thus ensuring higher energy eigen states are found.

An instance of VQD requires defining three algorithmic sub-components: an integer k denoting the number of eigenstates to calculate, a trial state (a.k.a. ansatz)which is a `QuantumCircuit`, and one of the classical [`optimizers`](qiskit.algorithms.optimizers#module-qiskit.algorithms.optimizers "qiskit.algorithms.optimizers"). The ansatz is varied, via its set of parameters, by the optimizer, such that it works towards a state, as determined by the parameters applied to the ansatz, that will result in the minimum expectation values being measured of the input operator (Hamiltonian). The algorithm does this by iteratively refining each excited state to be orthogonal to all the previous excited states.

An optional array of parameter values, via the *initial\_point*, may be provided as the starting point for the search of the minimum eigenvalue. This feature is particularly useful such as when there are reasons to believe that the solution point is close to a particular point.

The length of the *initial\_point* list value must match the number of the parameters expected by the ansatz being used. If the *initial\_point* is left at the default of `None`, then VQD will look to the ansatz for a preferred value, based on its given initial state. If the ansatz returns `None`, then a random point will be generated within the parameter bounds set, as per above. If the ansatz provides `None` as the lower bound, then VQD will default it to $-2\pi$; similarly, if the ansatz returns `None` as the upper bound, the default value will be $2\pi$.

**Parameters**

*   **ansatz** (`Optional`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]) – A parameterized circuit used as ansatz for the wave function.
*   **k** (`int`) – the number of eigenvalues to return. Returns the lowest k eigenvalues.
*   **betas** (`Optional`\[`List`\[`float`]]) – beta parameters in the VQD paper. Should have length k - 1, with k the number of excited states. These hyperparameters balance the contribution of each overlap term to the cost function and have a default value computed as the mean square sum of the coefficients of the observable.
*   **optimizer** (`Union`\[[`Optimizer`](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.optimizer.Optimizer"), [`Minimizer`](qiskit.algorithms.optimizers.Minimizer "qiskit.algorithms.optimizers.optimizer.Minimizer"), `None`]) – A classical optimizer. Can either be a Qiskit optimizer or a callable that takes an array as input and returns a Qiskit or SciPy optimization result.
*   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQD will look to the ansatz for a preferred point and if not will simply compute a random one.
*   **gradient** (`Union`\[[`GradientBase`](qiskit.opflow.gradients.GradientBase "qiskit.opflow.gradients.gradient_base.GradientBase"), `Callable`, `None`]) – An optional gradient function or operator for optimizer. Only used to compute the ground state at the moment.
*   **expectation** (`Optional`\[[`ExpectationBase`](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.expectation_base.ExpectationBase")]) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When `None` (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQD performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
*   **include\_custom** (`bool`) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
*   **max\_evals\_grouped** (`int`) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that multiple points to compute the gradient can be passed and if computed in parallel potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that improve overall execution time. Deprecated if a gradient operator or function is given.
*   **callback** (`Optional`\[`Callable`\[\[`int`, `ndarray`, `float`, `float`], `None`]]) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean, the evaluated standard deviation, and the current step.
*   **quantum\_instance** (`Union`\[[`Backend`](qiskit.providers.Backend "qiskit.providers.backend.Backend"), [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.quantum_instance.QuantumInstance"), `None`]) – Quantum Instance or Backend

## Methods

### compute\_eigenvalues

<span id="qiskit.algorithms.VQD.compute_eigenvalues" />

`VQD.compute_eigenvalues(operator, aux_operators=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Computes eigenvalues. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

**Parameters**

*   **operator** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – Qubit operator of the Observable
*   **aux\_operators** (`Union`\[`List`\[`Optional`\[[`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")]], `Dict`\[`str`, [`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")], `None`]) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

**Return type**

[`EigensolverResult`](qiskit.algorithms.EigensolverResult "qiskit.algorithms.eigen_solvers.eigen_solver.EigensolverResult")

**Returns**

EigensolverResult

### construct\_circuit

<span id="qiskit.algorithms.VQD.construct_circuit" />

`VQD.construct_circuit(parameter, operator)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Return the circuits used to compute the expectation value.

**Parameters**

*   **parameter** (`Union`\[`List`\[`float`], `List`\[[`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")], `ndarray`]) – Parameters for the ansatz circuit.
*   **operator** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – Qubit operator of the Observable

**Return type**

`List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]

**Returns**

A list of the circuits used to compute the expectation value.

### construct\_expectation

<span id="qiskit.algorithms.VQD.construct_expectation" />

`VQD.construct_expectation(parameter, operator, return_expectation=False)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Generate the ansatz circuit and expectation value measurement, and return their runnable composition.

**Parameters**

*   **parameter** (`Union`\[`List`\[`float`], `List`\[[`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")], `ndarray`]) – Parameters for the ansatz circuit.
*   **operator** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – Qubit operator of the Observable
*   **return\_expectation** (`bool`) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to compute the standard deviation of the expectation value.

**Return type**

`Union`\[[`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase"), `Tuple`\[[`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase"), [`ExpectationBase`](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.expectation_base.ExpectationBase")]]

**Returns**

The Operator equalling the measurement of the ansatz `StateFn` by the Observable’s expectation `StateFn`, and, optionally, the expectation converter.

**Raises**

*   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no operator has been provided.
*   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no expectation is passed and None could be inferred via the ExpectationFactory.

### get\_energy\_evaluation

<span id="qiskit.algorithms.VQD.get_energy_evaluation" />

`VQD.get_energy_evaluation(step, operator, return_expectation=False, prev_states=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Returns a function handle to evaluates the energy at given parameters for the ansatz.

This return value is the objective function to be passed to the optimizer for evaluation.

**Parameters**

*   **step** (`int`) – level of energy being calculated. 0 for ground, 1 for first excited state…
*   **operator** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The operator whose energy to evaluate.
*   **return\_expectation** (`bool`) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to evaluate other operators with the same expectation value converter.
*   **prev\_states** (`Optional`\[`List`\[`ndarray`]]) – List of parameters from previous rounds of optimization.

**Return type**

`Callable`\[\[`ndarray`], `Union`\[`float`, `List`\[`float`]]]

**Returns**

A callable that computes and returns the energy of the hamiltonian of each parameter, and, optionally, the expectation

**Raises**

*   **RuntimeError** – If the circuit is not parameterized (i.e. has 0 free parameters).
*   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If operator was not provided.

### print\_settings

<span id="qiskit.algorithms.VQD.print_settings" />

`VQD.print_settings()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Preparing the setting of VQD into a string.

**Returns**

the formatted setting of VQD.

**Return type**

str

### supports\_aux\_operators

<span id="qiskit.algorithms.VQD.supports_aux_operators" />

`classmethod VQD.supports_aux_operators()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit/algorithms/eigen_solvers/vqd.py "view source code")

Whether computing the expectation value of auxiliary operators is supported.

**Return type**

`bool`

**Returns**

True if aux\_operator expectations can be evaluated, False otherwise

## Attributes

<span id="qiskit.algorithms.VQD.ansatz" />

### ansatz

Returns the ansatz.

**Return type**

[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

<span id="qiskit.algorithms.VQD.callback" />

### callback

Returns callback

**Return type**

`Optional`\[`Callable`\[\[`int`, `ndarray`, `float`, `float`, `int`], `None`]]

<span id="qiskit.algorithms.VQD.expectation" />

### expectation

The expectation value algorithm used to construct the expectation measurement from the observable.

**Return type**

`Optional`\[[`ExpectationBase`](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.expectation_base.ExpectationBase")]

<span id="qiskit.algorithms.VQD.gradient" />

### gradient

Returns the gradient.

**Return type**

`Union`\[[`GradientBase`](qiskit.opflow.gradients.GradientBase "qiskit.opflow.gradients.gradient_base.GradientBase"), `Callable`, `None`]

<span id="qiskit.algorithms.VQD.include_custom" />

### include\_custom

Returns include\_custom

**Return type**

`bool`

<span id="qiskit.algorithms.VQD.initial_point" />

### initial\_point

Returns initial point.

**Return type**

`Optional`\[`ndarray`]

<span id="qiskit.algorithms.VQD.max_evals_grouped" />

### max\_evals\_grouped

Returns max\_evals\_grouped

**Return type**

`int`

<span id="qiskit.algorithms.VQD.optimizer" />

### optimizer

Returns optimizer

**Return type**

[`Optimizer`](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.optimizer.Optimizer")

<span id="qiskit.algorithms.VQD.quantum_instance" />

### quantum\_instance

Returns quantum instance.

**Return type**

`Optional`\[[`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.quantum_instance.QuantumInstance")]

<span id="qiskit.algorithms.VQD.setting" />

### setting

Prepare the setting of VQD as a string.

